# lattice-climate

./: AGENT.md  LICENSE  README.md  pyproject.toml
memory/: JOURNAL.md
src/lattice_climate/: __init__.py  climate.py  ising.py  lattice.py  monte_carlo.py  phase.py  potts.py  transfer.py
src/lattice_climate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_lattice_climate.py
