[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-climate"
version = "0.1.0"
description = "Lattice Hamiltonian models for climate simulation — Ising/Potts on geographical grids"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
